--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(bootloader_util
 	src/Intel_hex_loader.cpp
+	src/Bootloader_key.cpp
 )
 
 target_include_directories(bootloader_util PUBLIC
